spade-tests/src/snapshots/spade_tests__ast_lowering__no_mangle_all_errors_on_output_type_with_valid_suggestion.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[no_mangle(all)]
entity foo(out: int<8>) -> int<8> {
    let a = out;
    let b = trunc(out + 1);
    b
}

error: Cannot apply `#[no_mangle(all)]`
  ┌─ testinput:2:28
  │
2 │ entity foo(out: int<8>) -> int<8> {
  │                            ^^^^^^ Output types are always mangled
  │
  = Consider replacing the output with an inverted input
  │
2 │ entity foo(out: int<8>, out_: inv int<8>) -> int<8> {
  │                       ++++++++++++++++++  ---------
  = ...and `set` the inverted input to the return value
  │
5 │     set out_ = b;
  │     +++++++++++ +
