spade-tests/src/snapshots/spade_tests__ast_lowering__no_mangle_can_only_take_all.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[no_mangle(notall)]
entity foo() {}

error: Invalid attribute syntax
  ┌─ testinput:1:13
  │
1 │ #[no_mangle(notall)]
  │             ^^^^^^ Unexpected parameter to `#[no_mangle])
  │
  = Did you mean `#[no_mangle(all)]`?
  │
1 │ #[no_mangle(all)]
  │             ~~~
