spade-tests/src/snapshots/spade_tests__ast_lowering__partial_undeclared_name_3.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod wrap {
    mod mod1 {
        mod mod2 {
            fn yes() -> bool { true }
        }
    }

    fn top() -> bool {
        mod1::yes()
    }
}


error: Use of undeclared name wrap::mod1::yes
  ┌─ testinput:9:15
  │
9 │         mod1::yes()
  │               ^^^ Undeclared name
