spade-tests/src/snapshots/spade_tests__ast_lowering__pipeline_label_field_access_gives_good_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) test(clk: clock) {
    'label
    let x = {@label.thing};
}


error: Unexpected type label
  ┌─ testinput:3:14
  │
2 │     'label
  │     ------ label is defined as a type here
3 │     let x = {@label.thing};
  │              ^^^^^^ Unexpected type
